# t-rex

./: .gitignore  README.md  default.nix  regex-safe.cabal  shell.nix  stack.yaml  t-rex.cabal
nix/: default.nix  versions.json
src/Text/Regex/: Safe.hs  TRex.hs
test/: Main.hs
