name:                t-rex
version:             0.1.0.0
synopsis:            Typed regular expressions based on regex-tdfa
-- description:
homepage:            https://github.com/gdeest/t-rex#readme
license:             BSD3
license-file:        LICENSE
author:              Gaël Deest
maintainer:          gael.deest@gmail.com
copyright:           2018 Gaël Deest
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -O -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns

  hs-source-dirs:      src
  exposed-modules:     Text.Regex.TRex
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , regex-base
                     , regex-pcre
                     , semigroupoids
                     , tostring
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , t-rex
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gdeest/t-rex
